--- a/package.json
+++ b/package.json
@@ -25,5 +25,6 @@
     "aws-cdk-lib": "2.135.0",
     "constructs": "^10.3.0",
     "source-map-support": "^0.5.21"
-  }
+  },
+  "packageManager": "pnpm@9.0.6+sha256.0624e30eff866cdeb363b15061bdb7fd9425b17bc1bb42c22f5f4efdea21f6b3"
 }
