--- a/package.json
+++ b/package.json
@@ -9,13 +9,15 @@
     "build": "tsc",
     "watch": "tsc -w",
     "test": "NODE_OPTIONS='--experimental-vm-modules' jest",
-    "cdk": "cdk"
+    "cdk": "cdk",
+    "fmt": "prettier --write '**/*.{[jt]s,json}'"
   },
   "devDependencies": {
     "@types/jest": "^29.5.12",
     "@types/node": "20.12.3",
     "aws-cdk": "2.135.0",
     "jest": "^29.7.0",
+    "prettier": "3.2.5",
     "ts-jest": "^29.1.2",
     "ts-jest-resolver": "^2.0.1",
     "ts-node": "^10.9.2",
