--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "typescript": "~5.4.3"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.563.0",
     "aws-cdk-lib": "2.135.0",
     "constructs": "^10.3.0",
     "source-map-support": "^0.5.21"
